--- a/src/components/Timeline/TimelineComponent.css
+++ b/src/components/Timeline/TimelineComponent.css
@@ -1,10 +1,10 @@
 .feature-list {
-    max-height: 180px;
-    overflow-y: scroll;
-    padding: 2px;
-    border-radius:4px;
+  max-height: 180px;
+  overflow-y: auto;
+  padding: 2px;
+  border-radius: 4px;
 }
 
 ul {
-    list-style-type: square !important;
+  list-style-type: square !important;
 }
