--- a/src/modules/release/list/ReleaseList.css
+++ b/src/modules/release/list/ReleaseList.css
@@ -21,3 +21,22 @@
   width: 32%;
   text-align: -webkit-center;
 }
+
+.releaseFeaturesAdd .MuiAutocomplete-root .MuiFormControl-root div fieldset,
+.releaseFeaturesAdd
+  .MuiAutocomplete-root
+  .MuiFormControl-root
+  div
+  fieldset:hover {
+  border-color: #dee2e6 !important;
+}
+
+.releaseFeaturesAdd
+  .MuiAutocomplete-root
+  .MuiFormControl-root:focus-within
+  fieldset {
+  border-color: #86b7fe !important;
+  outline: 0 !important;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25) !important;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !important;
+}
