--- a/src/pages/Roadmap/components/Report/Report.css
+++ b/src/pages/Roadmap/components/Report/Report.css
@@ -1,28 +1,27 @@
 table {
-    /*...all table attributes like fontsize etc*/
-    font-size:13px;
-    color:#333333;
+  /*...all table attributes like fontsize etc*/
+  font-size: 13px;
+  color: #333333;
 }
 table th {
-    background-color: #162944  !important;
-    color: #fff;
-    padding: 8px;
+  background-color: #162944 !important;
+  color: #fff;
+  padding: 8px;
 }
 table td {
-    /*...all td attributes like padding etc*/
-    padding: 8px;
+  /*...all td attributes like padding etc*/
+  padding: 8px;
 }
 
 .text-right {
-    text-align: right;
+  text-align: right;
 }
 
 .light-header {
-    background-color: #0C5595 !important;
+  background-color: #0c5595 !important;
 }
 
 .totals-header {
-    background-color: #fff !important;
-    color: #162944 !important;
+  background-color: #fff !important;
+  color: #162944 !important;
 }
-
