--- a/src/pages/RegistrationFinish/RegistrationFinish.css
+++ b/src/pages/RegistrationFinish/RegistrationFinish.css
@@ -1,5 +1,9 @@
 .main-container {
-    margin-top: 20vh;
+    /*margin-top: 20vh;*/
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .btn-space {
@@ -10,3 +14,5 @@
     display: flex;
     flex-direction: row-reverse;
 }
+
+
